reglage env
